--- a/index.css
+++ b/index.css
@@ -107,9 +107,19 @@ h1{
   .button-mail:active {
     background: linear-gradient(32deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
   }
-@media(max-width: 600px){
+  .dev-img{
+    height: auto;
+    width: 30%;
+  }
+
+  @media (max-width: 600px) {
     img{
-        height: auto;
-        width: 50%;
+      height: auto;
+      width: 50%;
     }
-}
+    .dev-img{
+      height: auto;
+      width: 50%;
+    }
+  }
+  
